# code

Chapter1_AndroidCartoonifier/Cartoonifier_Android/: AndroidManifest.xml  build.xml
Chapter1_AndroidCartoonifier/Cartoonifier_Android/jni/: Android.mk
Chapter1_AndroidCartoonifier/Cartoonifier_Android/src/com/Cartoonifier/: CartoonifierViewBase.java
Chapter1_AndroidCartoonifier/Cartoonifier_Desktop/: CMakeLists.txt
